Fix horizontal scroll problem and added footer in home page desktop

--- a/index.css
+++ b/index.css
@@ -5,6 +5,12 @@
   box-sizing: 0;
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
 }
@@ -689,5 +695,35 @@ footer > div > p:last-child {
     justify-content: space-around;
     width: 60%;
     margin: auto;
+  }
+
+  footer {
+    display: block;
+    display: flex;
+    color: #272a31;
+    font-family: Lato, sans-serif;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    gap: 30%;
+    padding-left: 20rem;
+    margin: none;
+    height: 150px;
+  }
+
+  footer > div {
+    display: flex;
+    flex-direction: column;
+    padding-right: 15rem;
+  }
+
+  footer > div > p {
+    display: block;
+    float: right;
+    text-align: start;
+  }
+
+  footer > div > p:last-child {
+    display: block;
   }
 }
